# rune-plugin

./: .codexignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
tests/: Makefile  conftest.py  pyproject.toml  run_harness.py  test_arc_batch_preflight.py  test_arc_batch_stop_hook.py  test_arc_issues_stop_hook.py  test_arc_result_signal_writer.py  test_checkpoint.py  test_enforce_polling.py  test_enforce_readonly.py  test_enforce_team_lifecycle.py  test_enforce_teams.py  test_enforce_zsh_compat.py  test_hooks.py  test_on_session_stop.py  test_on_task_completed.py  test_on_teammate_idle.py  test_pre_compact_checkpoint.py  test_report.py  test_resolve_session_identity.py  test_session_compact_recovery.py  test_session_start.py  test_session_team_hygiene.py  test_tome.py  test_validate_gap_fixer_paths.py  test_validate_inner_flame.py  test_validate_mend_fixer_paths.py  test_verify_team_cleanup.py
tests/bats/: test_guard_clauses.bats  test_helper.bash
tests/challenge/: plan.md
tests/challenge/evaluation/: functional_tests.py  test_functional.py
tests/fixtures/: checkpoint_v1.json  checkpoint_v3.json  checkpoint_v4.json  spot_findings.md  tome_injected.md  tome_sample.md
tests/helpers/: __init__.py  checkpoint_validator.py  claude_runner.py  code_evaluator.py  cost_tracker.py  report_generator.py  tome_parser.py
tests/pressure/: README.md  __init__.py  anti_patterns.py  conftest.py  detection.py  harness.py  test_mend_fixer.py  test_roundtable_circle.py  test_rune_smith.py
tests/soak/: __init__.py  conftest.py  test_long_pipeline.py
tests/stress/: __init__.py  conftest.py  test_multi_agent.py
(+718 files in other folders)
